<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/layoutContainer"
    android:background="@drawable/background_white"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.1">  <!-- the left part -->
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.85">   <!-- the middle part -->

        <!-- this is the main layout. the other parts are for 70% width -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:showDividers="none"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_language"
                android:id="@+id/language"
                android:textSize="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_25sdp"/>

            <Button
                android:id="@+id/english_button"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/button_english"
                android:background="@drawable/language_buttons"
                android:drawableLeft="@drawable/eng_flag" />

            <Button
                android:id="@+id/greek_button"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/button_greek"
                android:background="@drawable/language_buttons"
                android:drawableLeft="@drawable/greek_flag" />

        </LinearLayout>

        <Button
            android:id="@+id/back"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/buttons"
            android:text="@string/button_back"
            android:layout_marginBottom="@dimen/_42sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.1">  <!-- the right part -->
    </RelativeLayout>
</LinearLayout>

